--- a/app/src/main/res/values/answers.xml
+++ b/app/src/main/res/values/answers.xml
@@ -2034,7 +2034,80 @@ ans	переменная, хранящая результат последней
  Проактивность – это антоним реактивности. Что такое реактивность? Когда что-то загорелось, побежали – потушили. А проактивность – это мы сидим и думаем, как бы так сделать, чтобы не загорелось никогда, а если загорится, чтобы мы быстро справились. Фактически, проактивность - это управление рисками. Превентивное.\n
  А управление проектом – это, во-первых, умение увлекать команду формированием планов и управление этими планами. А во-вторых, проактивность – вы должны думать про риски, управлять ими, всячески их оценивать.\n
 </item>
- <!--37--><item>Уругвай</item>
+ <!--37--><item>37.ОРГАНИЗАЦИОННАЯ СТРУКТУРА ПРОЕКТА.\n\n\n\n\n
+Организационная структура проекта – это временная организационная структура, созданная для повышения качества управления и взаимодействия в проекте путем определения и визуализации процессов взаимодействия как между внутренними, так и с внешними участниками проекта.\n\n
+Команда проекта\n
+Проект — явление временное, и это определяет специфику управления его участниками. На время реализации проекта создается так называемая команда проекта, которая имеет определенную организационную структуру. Несмотря на все многообразие существующих проектов, в команде можно выделить ряд более или менее стандартных ролей.\n
+В первую очередь, это менеджер (руководитель) проекта — физическое лицо, несущее личную ответственность за успех проекта и осуществляющее оперативное руководство.\n
+Как правило, в компаниях назначают куратора проекта — представителя высшего руководства, который хоть и не вникает в тонкости текущего положения дел в проекте, но контролирует его ход, следит, чтобы проект соответствовал стратегическим целям компании, а если у менеджера проекта не хватает полномочий, — помогает ему своим авторитетом.\n
+Проектный комитет создается в компаниях, в которых бизнес построен по проектному типу. Это орган, задачи которого — отбирать проекты и контролировать их выполнение на высшем уровне, принимать ключевые решения.\n
+В технически сложных проектах важна роль главного инженера проекта (ГИП), который порой по статусу равен менеджеру проекта.\n
+В крупных проектах могут выделяться менеджеры по различным функциональным областям, например по управлению финансами, персоналом, рисками и т. п.\n
+Все вышеперечисленные роли образуют команду управления проектом, которая входит в команду проекта. Также участниками команды проекта являются исполнители как из числа штатных сотрудников компании, так и нанятые специально для реализации конкретного проекта. Иногда в нее включают подрядчиков и субподрядчиков.\n
+Отдельно стоит выделить проектный офис. В простейшем случае это своего рода секретариат, в котором хранится вся документация по проекту. Он может состоять как из одного, так и из нескольких сотрудников. В более продвинутых компаниях проектный офис также играет роль методологического центра, обслуживающего все проекты организации. Ниже представлен пример типичной команды проекта.\n\n
+\t\t\t\t\t\t\tВысшее руководство компании\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+\t\t\t\t\t\t\tПроектный комитет\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+\t\t\t\t\t\t\tКуратор проекта\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+\t\t\t\t\t\t\tМенеджер проекта\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+Рук-ль отдела | ГИП | Админ проекта\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+Исполнители | Подрядчики | Субподрядчики\n\n
+
+Проект и компания\n
+Ни один проект не существует в вакууме. Как правило, он реализуется в интересах некоторой компании, которая его и инициирует. Такая компания называется родительской, головной или материнской. Соответственно, у компании есть определенная организационная структура, и проект каким-то образом «встраивается» в нее.\n
+Самой распространенной структурой на сегодняшний день является функциональная структура, представляющая собой иерархию, в которой для каждого служащего четко определен один вышестоящий руководитель. При этом сотрудники сгруппированы по специальностям: маркетинг, производство, закупки и т.п. Такая структура оптимальна для хорошо налаженного циклического производства, однако вызывает ряд трудностей при выполнении проектов.\n
+На определенном этапе в организации возникают проекты и назначается их координатор. Он отвечает за выполнение проекта, достижение целей, соблюдение сроков и выделенного бюджета. Фактически же такой сотрудник не имеет достаточно полномочий для решения поставленных задач. Отвечать «за все» и не иметь полномочий – главная проблема для эффективного управления проектами. Также, одним из основных недостатков при реализации проектов является неповоротливость структуры, так как все распоряжения любой сотрудник может получать только от своего функционального руководителя, что вызывает длительные задержки при принятии решений. Также проблемы могут возникать из-за того, что интересы проекта вступают в противоречие с интересами функциональных руководителей.\n
+Такая структура весьма статична и эффективна только для реализации локальных проектов в рамках подразделения.\n\n
+ФУНКЦИОНАЛЬНАЯ ОРГСТРУКТУРА\n
+\t\t\t\t\tРуководство компании\n
+\t\t\t\t\t\t\t\t\t\t\t|\n
+Рук-ль подр_1 Рук-ль подр_2 Рук-ль подр_3\n
+\t\t\t\t\t|\t\t\t\t\t\t\t\t\t|\t\t\t\t\t\t\t\t\t\t|\n
+СОТРУДНИК_1  \tсотрудник_1  \t\t\tСОТРУДНИК_1\n
+сотрудник_2 \t\t\tСОТРУДНИК_2  \tсотрудник_2\n
+сотрудник_3 \t\t\tсотрудник_3  \t\t\tСОТРУДНИК_3\n\n
+
+Примечание: Большими буквами выделены сотрудники, участвующие в проекте.\n\n
+Проектная структура полностью противоположна матричной по своей организации. Здесь проектные команды как бы образуют свои собственные временные подразделения, созданные на время выполнения проекта и возглавляемые руководителями проектов. При такой организации функциональные подразделения выполняют сервисную функцию по отношению к проектам, т. е. оказывают им услуги, например техническую поддержку или бухгалтерское обслуживание. Также функциональные отделы играют роль пула ресурсов (например, специалистов), динамически перераспределяемых между проектами. В проектной структуре члены команды ориентированы только на достижение целей проекта и подчиняются только его руководителю.\n
+При такой организации проект фактически представляет собой филиал компании, при этом «законы», по которым действует сотрудник в рамках проекта, полностью определяются руководством проекта. Такая структура эффективна в крупных, значимых для компании проектах, как правило, продолжительностью более двух лет.\n\n
+ПРОЕКТНАЯ ОРГСТРУКТУРА\n
+\t\t\t\t\t\t\t\tРуководство компании\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+Рук-во проекта_1 Рук-во проекта_2 Др. отделы\n
+\t\t\t\t\t|\n
+СОТРУДНИК_1\n
+СОТРУДНИК_2\n
+СОТРУДНИК_3\n
+Примечание: Большими буквами сотрудники, участвующие в проекте.\n
+
+Основной недостаток проектной структуры состоит в том, что ресурсы не всегда используются эффективно (например, услугами юриста вы пользуетесь всего несколько часов в неделю, и их невыгодно оплачивать полностью из бюджета проекта).\n
+Эту проблему позволяет решить матричная структура, которая представляет собой компромисс между функциональной и проектной структурами. Здесь сотрудник подчиняется с одной стороны руководителю проекта, а с другой — своему функциональному руководителю. В зависимости от того, у кого из них больше власти, различают слабую (незначительная власть руководителя проекта) и сильную, или жесткую (менеджер проекта выше функционального руководителя) матрицы. Идеальной представляется сбалансированная матрица, при которой менеджер проекта ответственен за его результаты, а функциональный руководитель — за качество работы своих сотрудников, «командированных» в проект. Основной минус матричной структуры — двойное подчинение сотрудников.\n\n
+МАТРИЧНАЯ ОРГСТРУКТУРА\n
+\t\t\t\t\t\t\t\tРуководство компании\n
+\t\t\t\t\t\t\t\t\t\t\t\t|\n
+Рук-во проекта Рук-во отдела_1 Рук-во отдела_2\n
+\t\t\t\t\t|\n
+Менеджер_1 \tСотрудник_1 \t\tСотрудник_1\n
+МЕНЕДЖЕР_2 СОТРУДНИК_2 СОТРУДНИК_2\n
+Менеджер_3 \tСотрудник_3 \t\tСотрудник_3\n
+Примечание: Большими буквами сотрудники, участвующие в проекте.\n
+В компании могут одновременно сосуществовать различные оргструктуры. Наибольшее применение получила слабая матрица, т. к. традиционно велика роль функциональных руководителей.\n\n
+Выбор организационной структуры проекта\n
+Каждый тип структуры имеет свои плюсы и минусы. Матричная структура является компромиссной, ее разновидности можно наиболее часто встретить в компаниях, бизнес которых связан с ведением проектов. Зачастую в одной компании можно встретить несколько структур в зависимости от масштаба и других особенностей конкретного проекта. Однако можно дать ряд рекомендаций по выбору организационной структуры.\n\n
+Крит. выбора:	Функц-ая	Матричная	Проектная\n
+Уров. неопр-сти:	Низкий	Средний	Высокий\n
+Технология:	Типовая	Сложная	Инновационная\n
+Комплексность:	Низкая	Средняя	Высокая\n
+Продолжительность:	Малая	Средняя	Большая\n
+Знач. для компании:	Малое	Среднее	Ключевое\n
+Уровень взаимосвязей между частями проекта:	Низкий	Средний	Высокий\n
+Важность фактора времени (наличие критических сроков):	Низкая	Средняя	Высокая\n
+Зависимость от вышестоящей организации:	Высокая	Средняя	Низкая\n
+</item>
  <!--38--><item>Уругвай</item>
  <!--39--><item>Уругвай</item>
  <!--40--><item>Уругвай</item>
