--- a/app/src/main/res/values/answers.xml
+++ b/app/src/main/res/values/answers.xml
@@ -2352,10 +2352,141 @@ V (а значит и, E, иначе оно было бы мультимноже
 - другие материалы, иллюстрирующие проект, например: блок-схемы программного комплекса и программных модулей.\n
 Сопровождение и эксплуатация. После завершения тестирования программного комплекса программное обеспечение сдается в эксплуатацию. В процессе эксплуатации может возникнуть необходимость добавления в программный комплекс новых функций, устранение ошибок, обнаруженных в процессе эксплуатации и т.д. Данный тип работ с программным комплексом в период его эксплуатации называется сопровождением.\n
 </item>
- <!--57--><item>Уругвай</item>
+ <!--57--><item>57.ТРЕБОВАНИЯ К РАЗРАБОТКЕ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ.\n\n\n\n\n\n
+Требования к программному обеспечению — совокупность утверждений относительно атрибутов, свойств или качеств программной системы, подлежащей реализации. Создаются в процессе разработки требований к программному обеспечению, в результате анализа требований.
+Требования могут выражаться в виде текстовых утверждений и графических моделей.\n
+В классическом техническом подходе совокупность требований используется на стадии проектирования программного обеспечения (ПО). Требования также используются в процессе проверки ПО, так как тесты основываются на определённых требованиях.\n
+Этапу разработки требований может предшествовать технико-экономическое обоснование или концептуальная фаза анализа проекта. Фаза разработки требований может быть разбита на выявление требований (сбор, понимание, рассмотрение и выяснение потребностей заинтересованных лиц), анализ (проверка целостности и законченности), спецификация (документирование требований) и проверка правильности.\n\n
+ Виды требований по уровням \n
+•	Бизнес-требования — определяют назначение ПО, описываются в документе о видении (vision) и границах проекта (scope).\n
+•	Пользовательские требования — определяют набор пользовательских задач, которые должна решать программа, а также способы (сценарии) их решения в системе. Пользовательские требования могут выражаться в виде фраз утверждений, в виде сценариев использования (англ. use case), пользовательских историй (англ. user stories), сценариев взаимодействия (scenario).\n\n
+Виды требований по характеру\n
+•	Функциональный характер — требования к поведению системы\n
+o	Бизнес-требования\n
+o	Пользовательские требования\n
+o	Функциональные требования\n
+•	Нефункциональный характер — требования к характеру поведения системы\n
+o	Бизнес-правила — определяют ограничения, проистекающие из предметной области и свойств автоматизируемого объекта (предприятия)\n
+o	Системные требования и ограничения — определения элементарных операций, которые должна иметь система, а также различных условий, которым она может удовлетворять. К системным требованиям и ограничениям относятся:\n
+	Ограничения на программные интерфейсы, в том числе к внешним системам\n
+	Требования к атрибутам качества\n
+	Требования к применяемому оборудованию и ПО\n
+o	Требования к документированию\n
+o	Требования к дизайну и юзабилити\n
+o	Требования к безопасности и надёжности\n
+o	Требования к показателям назначения (производительность, устойчивость к сбоям и т. п.)\n
+o	Требования к эксплуатации и персоналу\n
+o	Прочие требования и ограничения (внешние воздействия, мобильность, автономность и т. п.).\n\n
+Источники требований \n
+•	Законодательство (конституция, законы, распоряжения)\n
+•	Нормативное обеспечение организации (регламенты, положения, уставы, приказы)\n
+•	Текущая организация деятельности объекта автоматизации\n
+•	Модели деятельности (диаграммы бизнес-процессов)\n
+•	Представления и ожидания потребителей и пользователей системы\n
+•	Журналы использования существующих программно-аппаратных систем\n
+•	Конкурирующие программные продукты\n\n
+Качество требований\n
+Характеристики качества требований по-разному определены различными источниками. Однако, следующие характеристики являются общепризнанными:\n
+Характеристика →→→ Объяснение\n
+Единичность	→→→ Требование описывает одну и только одну вещь.\n
+Завершённость	→→→ Требование полностью определено в одном месте и вся необходимая информация присутствует.\n
+Последовательность	→→→ Требование не противоречит другим требованиям и полностью соответствует внешней документации.\n
+Атомарность	→→→ Требование «атомарно». То есть оно не может быть разбито на ряд более детальных требований без потери завершённости.\n
+Отслеживаемость	→→→ Требование полностью или частично соответствует деловым нуждам как заявлено заинтересованными лицами и документировано.\n
+Актуальность	→→→ Требование не стало устаревшим с течением времени.\n
+Выполнимость	→→→ Требование может быть реализовано в пределах проекта.\n
+Недвусмысленность	→→→ Требование кратко определено без обращения к техническому жаргону, акронимам и другим скрытым формулировкам. Оно выражает объективные факты, не субъективные мнения. Возможна одна и только одна интерпретация. Определение не содержит нечётких фраз. Использование отрицательных утверждений и составных утверждений запрещено.\n
+Обязательность	→→→ Требование представляет определённую заинтересованным лицом характеристику, отсутствие которой приведёт к неполноценности решения, которая не может быть проигнорирована. Необязательное требование — противоречие самому понятию требования.\n
+Проверяемость	→→→ Реализованность требования может быть определена через один из четырёх возможных методов: осмотр, демонстрация, тест или анализ.\n\n
+Методы выявления требований\n
+•	Интервью, опросы, анкетирование\n
+•	Мозговой штурм, семинар\n
+•	Наблюдение за производственной деятельностью, «фотографирование» рабочего дня\n
+•	Анализ нормативной документации\n
+•	Анализ моделей деятельности\n
+•	Анализ конкурентных продуктов\n
+•	Анализ статистики использования предыдущих версий системы\n\n
+Проверка требований\n
+Все требования должны поддаваться проверке. Наиболее общепринятая методика проверки — тесты. Если проверка тестами невозможна, тогда должен использоваться другой метод проверки (анализ, демонстрация, осмотр или обзор дизайна).\n
+Определённые требования, по своей сути, не поддаются проверке. Они включают требования, которые говорят, что система никогда не должна или всегда должна показывать специфическое свойство. Надлежащее тестирование этих требований потребовало бы бесконечного цикла тестирования. Такие требования должны быть переопределены так, чтобы они стали поддающимися проверке. Как указано выше, все требования должны поддаваться проверке.\n
+Нефункциональные требования, которые не поддаются проверке на программном уровне, все равно должны быть сохранены как документация намерений клиента. Такие требования к продукту могут быть преобразованы в требования к процессу. Например, нефункциональное требование, чтобы ПО не содержало «потайных ходов», может быть удовлетворено заменой на требование использовать парное программирование. Сложные требования безопасности авиационного программного обеспечения могут быть удовлетворены следованием процессу разработки DO-178B (англ.).\n\n
+Анализ требований\n
+При разработке требований часто возникают проблемы двусмысленности, неполноты, и несогласованности отдельных требований. Устранение этих проблем на этапе разработки требований стоит на несколько порядков меньше, чем устранение этих же проблем на поздних стадиях разработки. Для решения и устранения этих проблем существует процесс разработки требований.\n
+При разработке требований существует технический компромисс между слишком неопределёнными требованиями и требованиями столь детализированными, что они:\n
+•	требуют много времени для разработки, иногда даже рискуют устареть к концу разработки;\n
+•	ограничивают возможные способы реализации;\n
+•	являются слишком дорогостоящими.\n\n
+Документирование требований\n
+Требования обычно используются как средство коммуникации между различными заинтересованными лицами. Это означает, что требования должны быть просты и понятны для обычных пользователей и разработчиков. Один общий способ задокументировать требование — это написать утверждение о том, что должна сделать система.\n
+В практике встречаются следующие типы документов требований:\n
+•	Спецификация требований программного обеспечения (англ. Software Requirements Specification, SRS)\n
+Спецификацию программного обеспечения часто называют техническим заданием. Это ошибка. Спецификация требований является частью технического задания в случае создания автоматизированных информационных систем.\n
+За создание спецификации программного обеспечения чаще всего в практике отвечает Системный аналитик, иногда — Бизнес-аналитик.\n
+Для графических моделей требований исторически использовались диаграммы или методологии графического моделирования: ER (IDEF1FX), IDEF0, IDEF3, DFD, UML, OCL, SysML, ARIS (eEPC, VAD).\n\n
+Изменение требований\n
+В общем случае требования изменяются со временем. После того, как требования определены и одобрены, изменения должны попадать под контроль внесения изменений. Для многих проектов требования изменяются до завершения создания системы. Это происходит частично из-за сложности программного обеспечения и того факта, что пользователи не знают, что им нужно на самом деле. Эта особенность требований привела к появлению процесса управления требованиями.\n
+</item>
  <!--58--><item>Уругвай</item>
- <!--59--><item>Уругвай</item>
- <!--60--><item>Уругвай</item>
+ <!--59--><item>59.ОБЩИЕ ПОНЯТИЯ ПРОЦЕДУРНОГО ПРОГРАММИРОВАНИЯ.\n\n\n\n\n
+Процеду́рное программи́рование — программирование на императивном языке, при котором последовательно выполняемые операторы можно собрать в подпрограммы, то есть более крупные целостные единицы кода, с помощью механизмов самого языка.\n
+Процедурное программирование является отражением архитектуры традиционных ЭВМ, которая была предложена Фон Нейманом в 1940-х годах. Теоретической моделью процедурного программирования служит абстрактная вычислительная система под названием машина Тьюринга.\n\n
+Основные сведения\n
+Выполнение программы сводится к последовательному выполнению операторов с целью преобразования исходного состояния памяти, то есть значений исходных данных, в заключительное, то есть в результаты. Таким образом, с точки зрения программиста имеются программа и память, причем первая последовательно обновляет содержимое последней.\n
+Процедурный язык программирования предоставляет возможность программисту определять каждый шаг в процессе решения задачи. Особенность таких языков программирования состоит в том, что задачи разбиваются на шаги и решаются шаг за шагом. Используя процедурный язык, программист определяет языковые конструкции для выполнения последовательности алгоритмических шагов.\n\n
+Процедурные языки программирования\n
+•	Ada (язык общего назначения)\n
+•	Алгол 60\n
+•	Алгол 68\n
+•	Basic (до появления Visual Basic)\n
+•	Си\n
+•	КОБОЛ\n
+•	Фортран\n
+•	Модула-2\n
+•	HAL/S\n
+•	Pascal\n
+•	PureBasic\n
+•	ПЛ/1\n
+•	РАПИРА\n
+•	REXX\n
+•	Go\n
+•	Nim\n
+</item>
+ <!--60--><item>60.	ИСПОЛЬЗОВАНИЕ INTERNET В КАЧЕСТВЕ СРЕДЫ ПЕРЕДАЧИ ДАННЫХ. ПРЕИМУЩЕСТВА И НЕДОСТАТКИ ЭТОГО МЕТОДА.\n\n\n\n\n\n
+Интерне́т  — всемирная система объединённых компьютерных сетей для хранения, обработки и передачи информации.\n
+Упоминается как Всемирная сеть и Глобальная сеть, а также просто Сеть. Построена на базе стека протоколов TCP/IP. На основе Интернета работает Всемирная паутина (World Wide Web, WWW) и множество других систем передачи данных. К середине 2015 года число пользователей достигло 3,3 млрд человек. Во многом это было обусловлено широким распространением сотовых сетей с доступом в Интернет стандартов 3G и 4G, развитием социальных сетей и удешевлением стоимости интернет-трафика.\n\n
+История\n
+Принципы, по которым строится Интернет, впервые были применены в сети ARPANET, созданной в 1969 году по заказу американского агентства DARPA. Используя наработки ARPANET, в 1984 году Национальный научный фонд США создал сеть NSFNET для связи между университетами и вычислительными центрами. В отличие от закрытой ARPANET подключение к NSFNET было достаточно свободным и к 1992 году к ней подключились более 7500 мелких сетей, включая 2500 за пределами США. С передачей опорной сети NSFNET в коммерческое использование появился современный Интернет.\n\n
+Разработка концепции\n
+Американской исследовательской программой в направлении быстрой передачи сообщений руководил Джозеф Ликлайдер (Joseph Carl Robnett Licklider), опубликовавший в 1962 году работу «Galactic Network». Благодаря Ликлайдеру появилась первая детально разработанная концепция компьютерной сети. Она была подкреплена работами Леонарда Клейнрока (Leonard Kleinrock) — он описал технологию, способную разбивать файлы на части и передавать их различными путями через сеть (1961—1964).\n
+В 1962 году Пол Бэран (Пейсах Баран, Paul Baran) из RAND Corporation подготовил доклад «On Distributed Communication Networks». В его предложении сеть напоминала рыбацкий невод. Все узлы наделены способностью маршрутизировать трафик, каждый из них связан с несколькими другими узлами. Он предложил децентрализовать систему узлов связи (все региональные узлы связи в сети равноправны), которая даже при разрушении её части будет работоспособна. Предлагалось передавать сообщения в цифровом, а не в аналоговом виде. Само сообщение предлагалось разбивать на небольшие порции — «пакеты», и передавать по распределённой сети все пакеты одновременно. Из принятых в месте назначения дискретных пакетов сообщение заново «собиралось».\n
+Параллельно в Англии Дональд Дэвис (Donald Watts Davies) разработал концепцию Сети и добавил в неё существенную деталь — компьютерные узлы должны не только передавать данные, но и стать переводчиками для различных компьютерных систем и языков. Именно Дэвису принадлежит термин «пакет» для обозначения фрагментов файлов, пересылаемых раздельно.\n\n
+Современное развитие\n
+В 1991 году Всемирная паутина стала общедоступна в интернете, а в 1993 году появился знаменитый веб-браузер NCSA Mosaic. Всемирная паутина набирала популярность.\n
+Можно считать, что существуют две ясно различимые эры в истории Web: [до браузера Mosaic] Марка Андриссена и после.\n
+Именно сочетание веб-протокола от Тима Бернерс-Ли, который обеспечивал коммуникацию, и браузера (Mosaic) от Марка Андриссена, который предоставил функционально совершенный пользовательский интерфейс, создало условия для наблюдаемого взрыва (интереса к Веб). За первые 24 месяца, истёкшие после появления браузера Моsaic, Web прошёл стадию от полной неизвестности (за пределами считанного числа людей внутри узкой группы учёных и специалистов лишь одного мало кому известного профиля деятельности) до полной и абсолютно везде в мире его распространённости.
+— A Brief History of Cyberspace, Mark Pesce, ZDNet, 15 октября 1995\n
+В 1995 году NSFNet вернулась к роли исследовательской сети, маршрутизацией всего трафика интернета теперь занимались сетевые провайдеры, а не суперкомпьютеры Национального научного фонда.\n
+В том же 1995 году Всемирная паутина стала основным поставщиком информации в интернете, обогнав по трафику протокол пересылки файлов FTP. Был образован Консорциум Всемирной паутины (W3C). Можно сказать, что Всемирная паутина преобразила интернет и создала его современный облик. С 1996 года Всемирная паутина почти полностью подменяет собой понятие «интернет».\n
+В 1990-е годы интернет объединил в себе большинство существовавших тогда сетей (хотя некоторые, как Фидонет, остались обособленными). Объединение выглядело привлекательным благодаря отсутствию единого руководства, а также благодаря открытости технических стандартов интернета, что делало сети независимыми от бизнеса и конкретных компаний. К 1997 году в интернете насчитывалось уже около 10 млн компьютеров, было зарегистрировано более 1 млн доменных имён. Интернет стал очень популярным средством для обмена информацией.\n
+В настоящее время подключиться к интернету можно через спутники связи, радиоканалы, кабельное телевидение, телефон, сотовую связь, специальные оптико-волоконные линии или электропровода. Всемирная сеть стала неотъемлемой частью жизни в развитых и развивающихся странах.\n
+В течение пяти лет Интернет достиг аудитории свыше 50 миллионов пользователей. Другим средствам коммуникации требовалось гораздо больше времени для достижения такой популярности:\n\n
+Информационная среда	Время, лет\n
+Радио	38\n
+Телевидение	13\n
+Кабельное телевидение	10\n
+Интернет	5\n\n
+С 22 января 2010 года прямой доступ в интернет получил экипаж Международной космической станции.\n
+В сентябре 2017 года ООН сообщила о том, что доступ к интернету имеют меньше половины (48 %) населения Земли. При этом с 2010 года количество интернет-пользователей увеличилось на 1,5 млрд человек.\n\n
+
+Internet как среда распространения информации в режиме реального времени предоставляет пользователю следующие несомненные преимущества:\n
+Открытость и разработанность стандартов. Наличие надежного набора технических средств для конструирования сервиса.\n
+Относительная дешевизна каналов связи.\n
+Доступность. Возможность доступа пользователя к информации из любой точки без каких-либо дополнительных затрат.\n\n
+Тем не менее, существует ряд факторов, ограничивающих широкое использование Internet в качестве среды распространения финансовой информации. Перечислим проблемы, возникающие при использовании Internet, и приведем их возможные решения:\n
+Неопределенность стандартов защиты данных от несанкционированного доступа и стандартов электронных платежей (можно ожидать утверждения необходимых стандартов в ближайшем будущем).\n
+Перегруженность сети, необходимость в повышенных требованиях к производительности серверов и пропускной способности каналов связи из-за растущего объема передаваемых данных и необходимости их постоянного обновления (эта проблема иногда решается путем использования выделенной полосы пропускания в пределах каналов Internet общего назначения).\n
+Различные ограничения возможностей обработки информации стандартными средствами доступа (существует несколько решений этой проблемы. Одно из них уже широко распространено в мире и заключается в написании специализированного программного обеспечения, использующего стандарты Internet, другое связано с использованием языка программирования Java, разработанного компанией Sun Microsystems специально для использования в среде Internet).\n
+</item>
  <!--61--><item>Уругвай</item>
  <!--62--><item>Уругвай</item>
  <!--63--><item>Уругвай</item>
