--- a/app/src/main/res/values/answers.xml
+++ b/app/src/main/res/values/answers.xml
@@ -2572,7 +2572,98 @@ R	Множество всех вещественных чисел.\n
 
 </item>
         <!--49-->
-        <item>Уругвай</item>
+        <item>49.ЛОГИЧЕСКИЕ ОПЕРАЦИИ. ЛОГИЧЕСКИЕ ОСНОВЫ КОМПЬЮТЕРА.\n\n\n\n
+Логические операции - мыслительные действия, результатом которых является изменение содержания или объема понятий, а также образование новых понятий.\n
+Логическое выражение - устное утверждение или запись, в которое, наряду с постоянными величинами, обязательно входят переменные величины (объекты). В зависимости от значений этих переменных величин (объектов) логическое выражение может принимать одно из двух возможных значений: истина (логическая 1) или ложь (логический 0).\n
+Сложное логическое выражение - логическое выражение, состоящее из одного или нескольких простых логических выражений (или сложных логических выражений), соединенных с помощью логических операций.\n\n
+
+Логические операции и таблицы истинности\n
+1) Логическое умножение или конъюнкция:\n
+Конъюнкция - это сложное логическое выражение, которое считается истинным в том и только том случае, когда оба простых выражения являются истинными, во всех остальных случаях данное сложенное выражение ложно.\n
+Обозначение: F = A &amp; B.\n
+
+Таблица истинности для конъюнкции\n
+A	B	F\n
+1	1	1\n
+1	0	0\n
+0	1	0\n
+0	0	0\n\n
+
+2) Логическое сложение или дизъюнкция:\n
+Дизъюнкция - это сложное логическое выражение, которое истинно, если хотя бы одно из простых логических выражений истинно и ложно тогда и только тогда, когда оба простых логических выражения ложны.\n
+Обозначение: F = A v B.\n
+Таблица истинности для дизъюнкции\n
+A	B	F\n
+1	1	1\n
+1	0	1\n
+0	1	1\n
+0	0	0\n\n
+
+3) Логическое отрицание или инверсия:\n
+Инверсия - это сложное логическое выражение, если исходное логическое выражение истинно, то результат отрицания будет ложным, и наоборот, если исходное логическое выражение ложно, то результат отрицания будет истинным. Другими простыми слова, данная операция означает, что к исходному логическому выражению добавляется частица НЕ или слова НЕВЕРНО, ЧТО.\n
+Обозначение: F = ¬A.\n
+Таблица истинности для инверсии\n
+A	¬А\n
+1	0\n
+0	1\n\n
+
+4) Логическое следование или импликация:\n
+Импликация - это сложное логическое выражение, которое истинно во всех случаях, кроме как из истины следует ложь. То есть данная логическая операция связывает два простых логических выражения, из которых первое является условием (А), а второе (В) является следствием.
+«A → B» истинно, если из А может следовать B.\n
+Обозначение: F = A → B.\n
+Таблица истинности для импликации\n
+
+A	B	F\n
+1	1	1\n
+1	0	0\n
+0	1	1\n
+0	0	1\n\n
+
+5) Логическая равнозначность или эквивалентность:\n
+Эквивалентность - это сложное логическое выражение, которое является истинным тогда и только тогда, когда оба простых логических выражения имеют одинаковую истинность.\n
+«A ↔ B» истинно тогда и только тогда, когда А и B равны.\n
+Обозначение: F = A ↔ B.\n
+Таблица истинности для эквивалентности\n
+
+A	B	F\n
+1	1	1\n
+1	0	0\n
+0	1	0\n
+0	0	1\n\n
+
+6) Операция XOR (исключающие или)\n
+«A ⊕ B» истинно тогда, когда истинно А или B, но не оба одновременно.\n
+Эту операцию также называют "сложение по модулю два".\n
+Обозначение: F = A ⊕ B.\n
+A	B	F\n
+1	1	0\n
+1	0	1\n
+0	1	1\n
+0	0	0\n\n
+
+Порядок выполнения логических операций в сложном логическом выражении\n
+
+1. Инверсия;\n
+2. Конъюнкция;\n
+3. Дизъюнкция;\n
+4. Импликация;\n
+5. Эквивалентность.\n\n
+
+Логическая операция — в программировании операция над выражениями логического (булевского) типа, соответствующая некоторой операции над высказываниями в алгебре логики. Как и высказывания, логические выражения могут принимать одно из двух истинностных значений — «истинно» или «ложно». Логические операции служат для получения сложных логических выражений из более простых. В свою очередь, логические выражения обычно используются как условия для управления последовательностью выполнения программы.\n
+В некоторых языках программирования (например, в языке Си) вместо логического типа или одновременно с ним используются числовые типы. В этом случае считается, что отличное от нуля значение соответствует логической истине, а ноль — логической лжи.\n
+Значение отдельного бита также можно рассматривать как логическое, если считать, что 1 означает «истинно», а 0 — «ложно». Это позволяет применять логические операции к отдельным битам, к битовым векторам покомпонентно и к числам в двоичном представлении поразрядно. Такое одновременное применение логической операции к последовательности битов осуществляется с помощью побитовых логических операций. Побитовые логические операции используются для оперирования отдельными битами или группами битов, применяются для наложения битовых масок, выполнения различных арифметических вычислений.\n
+Среди логических операций наиболее известны конъюнкция (&amp;&amp;), дизъюнкция (||), отрицание (!). Их нередко путают с битовыми операциями, хотя это разные вещи\n\n
+
+Логические основы компьютеров\n
+Компьютер состоит из элементов, связанных между собой и взаимодействующих во время его работы. Каждый элемент выполняет определенную операцию. Машинные элементы делятся на логические, запоминающие и вспомогательные. Логические элементы обеспечивают выполнение арифметических и логических операций; запоминающие элементы предназначаются для хранения информации, а вспомогательные элементы предназначаются для формирования стандартных сигналов и согласования работы всех элементов.\n
+Информация, которую обрабатывает компьютер, может быть представлена в виде высказываний, в которых что-либо утверждается или отрицается. Высказывание — это любое предложение, в отношении которого имеет смысл утверждение об его истинности или ложности. При этом считается, что высказывание не может быть одновременно и истинным, и ложным. Примеры высказываний: "Май — весенний месяц" — это истинное утверждение; "2+3=6" — ложное утверждение. Разумеется, не всякое предложение является логическим высказыванием. Например, "Вася — самый высокий человек" — это утверждение может быть как истинным, так и ложным.\n
+Наука, в которой с помощью формальных правил определяет истинность или ложность высказывания называется логикой. В алгебре логики все высказывания обозначаются буквами а, b, с и т. д., что позволяет манипулировать ими подобно тому, как в математике манипулируют обычными переменными, принимающие лишь два значения ИСТИНА (true) или ЛОЖЬ (false).\n
+Переменные и функции, принимающие значение 0 (false) или 1 (true) носят название логических или булевских по имени английского математика Джорджа Буля (1815-1864), основателя математической логики.\n
+При записи тех или иных логических выражений используется специальный язык, который принят в математической логике\n
+X	not X\n
+
+Основой цифровой техники служат три логические операции, лежащие в основе всех выводов компьютера. Иногда эти операции И, ИЛИ, НЕ называют "тремя китами машинной логики".\n
+</item>
         <!--50-->
         <item>50.ГРАФЫ. ОРИЕНТИРОВАННЫЕ И НЕОРИЕНТИРОВАННЫЕ ГРАФЫ.\n\n\n\n\n\n
 Граф — абстрактный математический объект, представляющий собой множество вершин графа и набор рёбер, то есть соединений между парами вершин. Например, за множество вершин можно взять множество аэропортов, обслуживаемых некоторой авиакомпанией, а за множество рёбер взять регулярные рейсы этой авиакомпании между городами.\n
